--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <title>Honda</title>
     <link rel="stylesheet" href="css/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/1ddeb2397b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <!---------------- Bike header ------------->
-        <section class="container">
-            <div class="head row">
-                <div class="col-sm-6">
+        <section class="container header">
+            <div class="row mx-auto py-4">
+                <div class="col-lg-6 px-5 py-5">
                     <h4 class="fs-6 text fw-normal text-light">Computer-controlled digital transistorized with
                         electronic
                         advance</h3>
@@ -29,8 +30,7 @@
                             mollit. Exercitation veniam consequat sunt nostrud amet.
                         </p>
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">
+                        <button type="button" class="btn btn-1" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             Purchase
                         </button>
 
@@ -57,15 +57,211 @@
                             </div>
                         </div>
                 </div>
-                <div class="col-sm-6 bike">
-                    <img class="img-responsive" src="images/header-bike.png" alt="bike">
+                <!------------- header bike image ----------------------->
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="images/header-bike.png" alt="bike">
                 </div>
 
             </div>
         </section>
     </header>
     <main>
+        <!---------------- Feature Bike ---------------->
+        <section class="container g-2 text-center">
+            <div class="text-center py-5">
+                <h1 class="text-dark fs-2 fw-bold">Fetured Bikes 2021</h1>
+                <p class="fs-6">Best bike collection</p>
+            </div>
+            <div class="row g-2">
+                <div class="col-lg-4">
+                    <img class="f-bike" src="images/feature-bike.jpg" alt="graybike">
+                </div>
+                <div class="col-lg-4">
+                    <img class="c-bike" src="images/feature-bike.jpg" alt="graybike">
+                </div>
+                <div class="col-lg-4">
+                    <img class="f-bike" src="images/feature-bike.jpg" alt="graybike">
+                </div>
+            </div>
+        </section>
+        <!------------------- Happy Clints ----------------->
+        <section class="container py-5">
+            <h1 class="says text-center fw-bolder py-5">Happy <span style="color: #E76F51;">Clients Says</span></h1>
+            <div class="row row-cols-1 row-cols-md-3 text-xl-center">
+                <div class="col">
+                    <div class="card m-4">
+                        <img src="images/user-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <P class="fw-lighte fs-5 text-muted text-center text-wrap">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</P>
+                            <div class="star">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <h4 class="fw-lighter text-center py-2"><span style="color: #23A6F0;">Regina Miles</span>
+                            </h4>
+                            <h4 class="text-center py-2">Banker</h4>
+                        </div>
 
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card m-4">
+                        <img src="images/user-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <P class="fw-lighte fs-5 text-muted text-center text-wrap">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</P>
+                            <div class="star">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <h4 class="fw-lighter text-center py-2"><span style="color: #23A6F0;">Regina Miles</span>
+                            </h4>
+                            <h4 class="text-center py-2">Banker</h4>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card m-4">
+                        <img src="images/user-3-removebg-preview.png" class="card-img-top-3" alt="...">
+                        <div class="card-body">
+                            <P class="fw-lighte fs-5 text-muted text-center text-wrap">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</P>
+                            <div class="star">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <h4 class="fw-lighter text-center py-2"><span style="color: #23A6F0;">Regina Miles</span>
+                            </h4>
+                            <h4 class="text-center py-2">Banker</h4>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+        <!------------------ Frequently Questions ------------------------>
+        <section class="container gx-lg-2">
+            <h1 class="p-5 text-center">Frequently Asked <span style="color:#E76F51;">Questions</span></h1>
+            <div class="container overflow-hidden">
+                <div class="row">
+                    <div class="col">
+                        <div class="">
+
+                            <img class="qus-img" src="images/faq.png">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3">
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item my-4">
+                                    <h2 class="accordion-header" id="headingOne">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                            data-bs-target="#collapseOne" aria-expanded="true"
+                                            aria-controls="collapseOne">
+                                            What are the most important things I should
+                                            know about riding a bike?
+                                        </button>
+                                    </h2>
+                                    <div id="collapseOne" class="accordion-collapse collapse show"
+                                        aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <p class="fw-lighter">Lorem ipsum dolor sit amet consectetur
+                                                adipisicing elit. Repudiandae illo
+                                                ad alias obcaecati quis consequuntur laboriosam, delectus cum fuga
+                                                sapiente quibusdam voluptatem quaerat rem impedit fugit, ducimus esse
+                                                voluptates culpa!</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item my-4">
+                                    <h2 class="accordion-header" id="headingTwo">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                            aria-expanded="false" aria-controls="collapseTwo">
+                                            How can I tell if my helmet is old and I need a
+                                            new one?
+                                        </button>
+                                    </h2>
+                                    <div id="collapseTwo" class="accordion-collapse collapse"
+                                        aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <strong>This is the second item's accordion body.</strong> It is hidden by
+                                            default, until the collapse plugin adds the appropriate classes that we use
+                                            to style each element. These classes control the overall appearance, as well
+                                            as the showing and hiding via CSS transitions. You can modify any of this
+                                            with custom CSS or overriding our default variables. It's also worth noting
+                                            that just about any HTML can go within the <code>.accordion-body</code>,
+                                            though the transition does limit overflow.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item my-4">
+                                    <h2 class="accordion-header" id="headingThree">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                            aria-expanded="false" aria-controls="collapseThree">
+                                            My bike has been in storage is it safe to ride?
+                                        </button>
+                                    </h2>
+                                    <div id="collapseThree" class="accordion-collapse collapse"
+                                        aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <strong>This is the third item's accordion body.</strong> It is hidden by
+                                            default, until the collapse plugin adds the appropriate classes that we use
+                                            to style each element. These classes control the overall appearance, as well
+                                            as the showing and hiding via CSS transitions. You can modify any of this
+                                            with custom CSS or overriding our default variables. It's also worth noting
+                                            that just about any HTML can go within the <code>.accordion-body</code>,
+                                            though the transition does limit overflow.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item my-4">
+                                    <h2 class="accordion-header" id="headingThree">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                            aria-expanded="false" aria-controls="collapseThree">
+                                            What rules should I follow when riding my bike?
+                                        </button>
+                                    </h2>
+                                    <div id="collapseThree" class="accordion-collapse collapse"
+                                        aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <strong>This is the third item's accordion body.</strong> It is hidden by
+                                            default, until the collapse plugin adds the appropriate classes that we use
+                                            to style each element. These classes control the overall appearance, as well
+                                            as the showing and hiding via CSS transitions. You can modify any of this
+                                            with custom CSS or overriding our default variables. It's also worth noting
+                                            that just about any HTML can go within the <code>.accordion-body</code>,
+                                            though the transition does limit overflow.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
