--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <section class="container-fluid">
             <h1 class="p-5 text-center">Frequently Asked <span style="color:#E76F51;">Questions</span></h1>
             <div class="row w-75 d-flex justify-content-lg-between m-auto">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-sm-12">
                     <div class="">
                         <img class="qus-img" src="images/faq.png">
                     </div>
@@ -308,7 +308,7 @@
 
         </Section>
         <!---------------------------- Ask More  ---------------------->
-        <section class="container-fluid p-0">
+        <section class="container-fluid p-0 m-0">
             <div class="text-center ask">
                 <h1 class="pt-5 mt-5">Ask Further Questions</h1>
                 <p class="text-muted">View Q&A Box</p>
@@ -318,7 +318,7 @@
             </div>
         </section>
     </main>
-    <footer class="container-fluid p-0">
+    <footer class="container-fluid p-0 m-0">
         <p class="bg-dark text-light text-center ">© 2020 bike. All rights reserved</p>
     </footer>
 
