--- a/index.html
+++ b/index.html
@@ -264,12 +264,12 @@
         </section>
         <!-------------------- Top bikes ---------------------->
 
-        <Section class="container-fluid top">
-            <h1 class="text-center">Top Bikes</h1>
+        <Section class="container-fluid top py-5">
+            <h1 class="mx-lg-5 px-lg-5">Top Bikes</h1>
 
             <div class="d-flex justify-content-center">
                 <div class="row">
-                    <div class="col-lg-3 shadow-lg p-3 m-3">
+                    <div class="col-lg-3 shadow-lg p-3 m-3 px-sm-0 mx-lg-0">
                         <div class="bg-info">
                             <img class="logo" src="images/bikr-removebg-preview.png" alt="">
                         </div>
@@ -308,7 +308,7 @@
 
         </Section>
         <!---------------------------- Ask More  ---------------------->
-        <section class="container-fluid p-0 m-0">
+        <section class="container-fluid last">
             <div class="text-center ask">
                 <h1 class="pt-5 mt-5">Ask Further Questions</h1>
                 <p class="text-muted">View Q&A Box</p>
