--- a/index.html
+++ b/index.html
@@ -268,19 +268,19 @@
             <h1 class="mx-lg-5 px-lg-5">Top Bikes</h1>
 
             <div class="d-flex justify-content-center">
-                <div class="row">
-                    <div class="col-lg-3 shadow-lg p-3 m-3 px-sm-0 mx-lg-0">
+                <div class="row row-cols-sm-1 gy-sm-2">
+                    <div class="col-lg-3 shadow-lg p-lg-3 m-lg-3  honda-bike">
                         <div class="bg-info">
-                            <img class="logo" src="images/bikr-removebg-preview.png" alt="">
+                            <img class="logo3" src="images/bikr-removebg-preview.png" alt="">
                         </div>
                         <div class="p-2">
                             <h1>Hero Honda</h1>
-                            <p>Hero Achiever is a product of Hero.<br>
-                                Its price is Tk 124,990.00.</p>
+                            <p>Hero Honda is a product of Hero.<br>
+                                Its price is Tk 119,990.00</p>
                             <Button class="btn btn-success">Buy Now</Button>
                         </div>
                     </div>
-                    <div class="col-lg-3 shadow-lg p-3 m-3">
+                    <div class="col-lg-3 shadow-lg p-lg-3 m-lg-3 ">
                         <div class="bg-info">
                             <img class="logo1" src="images/Yamaha-FZ-S-V2.0-1-425x353-removebg-preview.png" alt="">
                         </div>
@@ -291,16 +291,14 @@
                             <Button class="btn btn-success">Buy Now</Button>
                         </div>
                     </div>
-                    <div class="col-lg-3 shadow-lg p-3 m-3">
+                    <div class="col-lg-3 shadow-lg p-lg-3 m-lg-3 ">
                         <div class="bg-info">
-                            <img class="logo3" src="images/bikr-removebg-preview.png" alt="">
+                            <img class="logo3" src="images/bikr-removebg-preview.png">
                         </div>
-                        <div class="p-2">
-                            <h1>Hero Glamour</h1>
-                            <p>Hero Glamour is a product of Hero.<br>
-                                Its price is Tk 119,990.00</p>
-                            <Button class="btn btn-success">Buy Now</Button>
-                        </div>
+                        <h1>Hero Glamour</h1>
+                        <p>Hero Glamour is a product of Hero.<br>
+                            Its price is Tk 119,990.00</p>
+                        <Button class="btn btn-success">Buy Now</Button>
                     </div>
                 </div>
             </div>
