--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100">
-                            <img src="images/user-3-removebg-preview.png" class="card-img-top-3" alt="...">
+                            <img src="images/user-3.jpg" class="card-img-top-3" alt="...">
                             <div class="card-body text-center">
                                 <p class="card-text fw-lighter text-muted">
                                     Slate helps you see how
@@ -188,11 +188,11 @@
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <p class="fw-lighter">Lorem ipsum dolor sit amet consectetur
-                                        adipisicing elit. Repudiandae illo
-                                        ad alias obcaecati quis consequuntur laboriosam, delectus cum fuga
-                                        sapiente quibusdam voluptatem quaerat rem impedit fugit, ducimus esse
-                                        voluptates culpa!</p>
+                                    <p class="fw-lighter flex-shrink-0">Safety First! Always obey the rules of the road.
+                                        Obey all
+                                        traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not
+                                        just “riding” your bike. This will help you be a more focused and legally
+                                        compliant bike rider. </p>
                                 </div>
                             </div>
                         </div>
@@ -212,7 +212,7 @@
                                     to style each element. These classes control the overall appearance, as well
                                     as the showing and hiding via CSS transitions. You can modify any of this
                                     with custom CSS or overriding our default variables. It's also worth noting
-                                    that just about any HTML can go within the <code>.accordion-body</code>,
+                                    that just about any HTML can go within the
                                     though the transition does limit overflow.
                                 </div>
                             </div>
@@ -232,7 +232,7 @@
                                     to style each element. These classes control the overall appearance, as well
                                     as the showing and hiding via CSS transitions. You can modify any of this
                                     with custom CSS or overriding our default variables. It's also worth noting
-                                    that just about any HTML can go within the <code>.accordion-body</code>,
+                                    that just about any HTML can go within the
                                     though the transition does limit overflow.
                                 </div>
                             </div>
@@ -252,7 +252,7 @@
                                     to style each element. These classes control the overall appearance, as well
                                     as the showing and hiding via CSS transitions. You can modify any of this
                                     with custom CSS or overriding our default variables. It's also worth noting
-                                    that just about any HTML can go within the <code>.accordion-body</code>,
+                                    that just about any HTML can go within the
                                     though the transition does limit overflow.
                                 </div>
                             </div>
